--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,23 +1,47 @@
 ---
+import Header from "@components/Header.astro";
+import Footer from "@components/Footer.astro";
+import "@fontsource-variable/big-shoulders-text";
+import "@fontsource/poiret-one";
+import { ViewTransitions } from "astro:transitions";
+
 interface Props {
   title: string;
+  description: string;
 }
 
-const { title } = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Astro description" />
+    <meta name="description" content={description} />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="generator" content={Astro.generator} />
+    <link rel="icon" type="image/webp" href="../assets/logo.webp" />
+    <meta name="robots" content="nofollow, noindex" />
     <title>{title}</title>
   </head>
   <body>
+    <Header />
     <slot />
+    <Footer />
+    <style is:global>
+      :root {
+        color-scheme: dark;
+        --entry-animation: -20px;
+        --cover-animation: 20px;
+      }
+      html {
+        /* font-family: "Poiret One", sans-serif;
+        TODO: Change color */
+        font-family: "Big Shoulders Text Variable", sans-serif;
+        /* background: #fffee7; */
+        background: url("../assets/background.webp") repeat;
+        background-size: 5%;
+        background-attachment: fixed;
+      }
+    </style>
   </body>
 </html>
-<style is:global></style>
