--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,5 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import App from "@components/pages/App.astro";
 ---
 
-<Layout title="Welcome to Astro.">
-  <main></main>
-</Layout>
-
-<style></style>
+<App />
