Add contact form

--- a/src/components/pages/App.astro
+++ b/src/components/pages/App.astro
@@ -2,6 +2,7 @@
 import Layout from "@layouts/Layout.astro";
 import Intro from "@components/Intro.astro";
 import PreFooter from "@components/PreFooter.astro";
+import Form from "@components/Form.astro";
 import Bento from "@components/Bento.astro";
 ---
 
@@ -12,6 +13,7 @@ import Bento from "@components/Bento.astro";
   <main>
     <Intro />
     <Bento />
+    <Form />
     <PreFooter />
   </main>
 </Layout>
