Update background image

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,8 +38,8 @@ const { title, description } = Astro.props;
         TODO: Change color */
         font-family: "Big Shoulders Text Variable", sans-serif;
         /* background: #fffee7; */
-        background: url("../assets/background.webp") repeat;
-        background-size: 5%;
+        background: url("../assets/test.jpg") repeat;
+        background-size: 4%;
         background-attachment: fixed;
       }
     </style>
