--- a/src/components/BentoItem.astro
+++ b/src/components/BentoItem.astro
@@ -14,7 +14,7 @@ const { title, subtitle } = Astro.props;
   col-span-5
   relative rounded-xl
   backdrop-blur-md
-  border border-black/10
+  border border-pink_primary/10
   shadow-inner shadow-white/10
   overflow-hidden
   group
@@ -37,7 +37,7 @@ const { title, subtitle } = Astro.props;
 
     {
       subtitle && (
-        <h3 class="-mt-4 mb-4 text-3xl font-semibold text-sky-200/80">
+        <h3 class="-mt-4 mb-4 text-3xl font-semibold text-yellow_primary/70">
           {subtitle}
         </h3>
       )
