--- a/src/components/pages/App.astro
+++ b/src/components/pages/App.astro
@@ -1,7 +1,9 @@
 ---
 import Layout from "@layouts/Layout.astro";
 import Intro from "@components/Intro.astro";
+import AboutUs from "@components/AboutUs.astro";
 import PreFooter from "@components/PreFooter.astro";
+import Schedule from "@components/Schedule.astro";
 import Form from "@components/Form.astro";
 import Bento from "@components/Bento.astro";
 ---
@@ -12,7 +14,9 @@ import Bento from "@components/Bento.astro";
 >
   <main>
     <Intro />
+    <AboutUs />
     <Bento />
+    <Schedule />
     <Form />
     <PreFooter />
   </main>
