--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -4,7 +4,7 @@
   Plugins:
     - @tailwindcss/forms
 -->
-<section>
+<section id="contacto">
   <div class="mx-auto max-w-screen-xl px-4 py-16 sm:px-6 lg:px-8 text-center">
     <h1
       class="text-4xl font-semibold text-center text-wrap mx-auto mb-10 tracking-wide uppercase"
