--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,33 +15,26 @@ import CloseIcon from "@icons/Close.astro";
       class="relative z-10"
       aria-label="Logo"
     >
-      <!-- <Logo
+      <img
+        src="src/assets/logo.webp"
+        alt="logo"
         class="absolute w-10 m-auto blur-sm opacity-0 transition-opacity duration-300 hover:opacity-100"
       />
-      <Logo class="w-10" /> -->
-      <img src="src/assets/logo.webp" alt="logo" class="w-24 h-24" />
-    </HeaderLink>
-    <nav
-      id="header-menu"
-      class="fixed w-full h-dvh inset-0 bg-[#151a36]/90 md:text-xl lg:text-xl flex flex-col items-center justify-center gap-8 -translate-y-full transition-transform duration-300 target:translate-y-0 md:static md:h-[initial] md:bg-[initial] md:flex-row md:translate-y-[initial]"
-    >
-      <HeaderLink class="text__glowing" href="#">Principal</HeaderLink>
-      <HeaderLink class="text__glowing" href="#quienes_somos">
-        ¿Quiénes somos?
-      </HeaderLink>
-      <HeaderLink class="text__glowing" href="#fotos">Fotos</HeaderLink>
-      <HeaderLink class="text__glowing" href="#horarios">Horarios</HeaderLink>
-      <HeaderLink class="text__glowing" href="#contacto">Contacto</HeaderLink>
-      <Button
-        className="md:py-2 md:ml-auto md:text-base lg:text-base"
-        url="https://drive.google.com/file/d/1D7IvIqMyqAoG58fuk8bc0JvhAmrWBbOK/view"
+      <img src="src/assets/logo.webp" alt="logo" class="w-24" />
+      <nav
+        id="header-menu"
+        class="fixed w-full h-dvh inset-0 bg-purple_primary/90 md:text-xl lg:text-xl flex flex-col items-center justify-center gap-8 -translate-y-full transition-transform duration-300 target:translate-y-0 md:static md:h-[initial] md:bg-[initial] md:flex-row md:translate-y-[initial]"
       >
-        Button
-      </Button>
-      <a href="#header-nav" class="md:hidden absolute top-6 right-6">
-        <CloseIcon />
-      </a>
-    </nav>
-    <a href="#header-menu" class="md:hidden"><MenuIcon /></a>
+        <HeaderLink href="#">Principal</HeaderLink>
+        <HeaderLink href="#quienes_somos">¿Quiénes somos?</HeaderLink>
+        <HeaderLink href="#fotos">Fotos</HeaderLink>
+        <HeaderLink href="#horarios">Horarios</HeaderLink>
+        <HeaderLink href="#contacto">Contacto</HeaderLink>
+        <a href="#header-nav" class="md:hidden absolute top-6 right-6">
+          <CloseIcon />
+        </a>
+      </nav>
+      <a href="#header-menu" class="md:hidden"><MenuIcon /></a>
+    </HeaderLink>
   </div>
 </header>
