Add hover to NavBar links

--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -21,6 +21,7 @@ const isActive = currentPath === href && checkActive;
   class:list={[
     className,
     "border-b-2 uppercase",
+    "hover:border-white transition-colors duration-300",
     isActive ? "border-white" : "border-transparent",
   ]}
   {...restOfProps}
