Add about_us img and update component

--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -1,7 +1,56 @@
-<section id="quienes_somos">
+<section id="quienes_somos" class="mb-20">
   <h1
     class="text-4xl font-semibold text-center text-wrap mx-auto mb-10 tracking-wide uppercase"
   >
     Quiénes somos
   </h1>
+
+  <div
+    class="flex flex-col md:flex-row gap-y-5 md:gap-y-0 justify-center items-center"
+  >
+    <div class="w-full md:w-1/2 flex justify-center">
+      <img
+        src="src/assets/about_us.webp"
+        alt="Quiénes somos"
+        class="w-[500px] object-cover rounded-lg"
+      />
+    </div>
+    <div class="rounded-lg text-xl w-full md:w-1/2 p-5 mx-5 bg-black/50">
+      <p class="">
+        ¡Bienvenidos al Teatro Serpiente! Soy Nicole, la directora de este
+        maravilloso espacio cultural en el corazón de Santa Fe, Argentina. Acá,
+        en el Teatro Serpiente, nos enorgullecemos de ofrecer una experiencia
+        teatral única que invita a nuestros espectadores a sumergirse en un
+        mundo de arte, creatividad y emoción. Desde el momento en que ponen un
+        pie en nuestro teatro, son recibidos por la sinuosidad y el misterio de
+        nuestra fachada, que evoca la elegancia y la profundidad de una
+        serpiente enroscada.
+      </p>
+      <p class="mt-5">
+        Nuestra programación diversa y ecléctica abarca desde producciones
+        teatrales clásicas hasta espectáculos vanguardistas, asegurando que haya
+        algo para todos los gustos y preferencias. Nos esforzamos por desafiar
+        las expectativas y estimular el pensamiento crítico de nuestra
+        audiencia, y nuestro lema, <span
+          class="text-2xl text-orange_primary font-bold tracking-wide uppercase bg-purple_primary/50 p-1 rounded-md"
+          >"Cambiá la piel"</span
+        >, refleja nuestro compromiso de ofrecer experiencias transformadoras y
+        enriquecedoras. En el interior del Teatro Serpiente, encontrarán un
+        ambiente acogedor y lleno de historia, donde la excelencia artística se
+        combina con un diseño arquitectónico meticuloso y una acústica
+        impecable. Nuestros murales cuentan la rica historia del teatro
+        argentino, mientras que nuestras instalaciones modernas garantizan una
+        experiencia teatral inolvidable.
+      </p>
+      <p class="mt-5">
+        Estamos comprometidos con la excelencia en todo lo que hacemos, desde
+        nuestras producciones hasta nuestro servicio al cliente. En el Teatro
+        Serpiente, no solo ofrecemos entretenimiento, sino también una
+        oportunidad para explorar nuevas perspectivas, emociones y experiencias.
+        Esperamos darles la bienvenida pronto al Teatro Serpiente, donde los
+        sueños cobran vida y las emociones se desatan en cada función. ¡Gracias
+        por ser parte de nuestra comunidad teatral!
+      </p>
+    </div>
+  </div>
 </section>
