Add WhatsApp floating button

--- a/src/components/pages/App.astro
+++ b/src/components/pages/App.astro
@@ -4,8 +4,9 @@ import Intro from "@components/Intro.astro";
 import AboutUs from "@components/AboutUs.astro";
 import PreFooter from "@components/PreFooter.astro";
 import Schedule from "@components/Schedule.astro";
-import Form from "@components/Form.astro";
+import ContactForm from "@components/ContactForm.astro";
 import Bento from "@components/Bento.astro";
+import WhatsAppFloatingButton from "@components/WhatsAppFloatingButton.astro";
 ---
 
 <Layout
@@ -17,7 +18,8 @@ import Bento from "@components/Bento.astro";
     <AboutUs />
     <Bento />
     <Schedule />
-    <Form />
+    <ContactForm />
     <PreFooter />
+    <WhatsAppFloatingButton />
   </main>
 </Layout>
