--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -3,6 +3,7 @@ import HeaderLink from "@components/HeaderLink.astro";
 
 import MenuIcon from "@icons/Menu.astro";
 import CloseIcon from "@icons/Close.astro";
+import Logo from "./Logo.astro";
 ---
 
 <header
@@ -23,11 +24,7 @@ import CloseIcon from "@icons/Close.astro";
         target="_blank"
         rel="noopener noreferrer"
       >
-        <img
-          src="src/assets/logo.webp"
-          alt="logo"
-          class="absolute w-10 m-auto"
-        />
+        <Logo class="absolute w-10 m-auto" />
       </a>
       <a
         href="https://www.instagram.com/teatroserpiente/"
@@ -35,7 +32,7 @@ import CloseIcon from "@icons/Close.astro";
         target="_blank"
         rel="noopener noreferrer"
       >
-        <img src="src/assets/logo.webp" alt="logo" class="w-20 rounded-full" />
+        <Logo class="w-20 rounded-full" />
       </a>
 
       <nav
