Fix Bento images

--- a/src/components/Bento.astro
+++ b/src/components/Bento.astro
@@ -1,6 +1,9 @@
 ---
 import BentoItem from "@components/BentoItem.astro";
 import img1 from "@assets/img1.webp";
+import img2 from "@assets/img2.webp";
+import img3 from "@assets/img3.webp";
+import img4 from "@assets/img4.webp";
 ---
 
 <main>
@@ -26,7 +29,7 @@ import img1 from "@assets/img1.webp";
         class="background transition-scale absolute bottom-0 left-0 top-0
         -z-10 h-full w-full bg-pink-primary/60
         bg-cover bg-center bg-no-repeat opacity-90 bg-blend-luminosity duration-1000 ease-in-out group-hover:scale-110"
-        style="background-image: url('/src/assets/img1.webp')"
+        style={`background-image: ${img1}`}
       >
       </div>
 
@@ -46,7 +49,7 @@ import img1 from "@assets/img1.webp";
         class="background transition-scale absolute bottom-0 left-0 top-0
     -z-10 h-full w-full bg-yellow-primary/60
     bg-cover bg-center bg-no-repeat opacity-90 bg-blend-luminosity duration-1000 ease-in-out group-hover:scale-110"
-        style="background-image: url('/src/assets/img2.webp')"
+        style={`background-image: ${img2}`}
       >
       </div>
       <p
@@ -65,7 +68,7 @@ import img1 from "@assets/img1.webp";
         class="background transition-scale absolute bottom-0 left-0 top-0
         -z-10 h-full w-full bg-purple-primary/60
         bg-cover bg-center bg-no-repeat opacity-90 bg-blend-luminosity duration-1000 ease-in-out group-hover:scale-110"
-        style="background-image: url('/src/assets/img3.webp')"
+        style={`background-image: ${img3}`}
       >
       </div>
       <p
@@ -83,7 +86,7 @@ import img1 from "@assets/img1.webp";
         class="background transition-scale absolute bottom-0 left-0 top-0
         -z-10 h-full w-full bg-orange-primary/60
         bg-cover bg-center bg-no-repeat opacity-90 bg-blend-luminosity duration-1000 ease-in-out group-hover:scale-110"
-        style="background-image: url('/src/assets/img4.webp')"
+        style={`background-image: ${img4}`}
       >
       </div>
       <p
