--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -1,5 +1,6 @@
-<section id="contacto">
-  <div class="mx-auto max-w-screen-xl px-4 py-16 sm:px-6 lg:px-8 text-center">
+<div id="contacto" class="anchor-div-navbar"></div>
+<section class="my-32">
+  <div class="mx-auto max-w-screen-xl px-4 sm:px-6 lg:px-8 text-center">
     <h1
       class="text-4xl font-semibold text-center text-wrap mx-auto mb-10 tracking-wide uppercase"
     >
