--- a/src/components/Schedule.astro
+++ b/src/components/Schedule.astro
@@ -1,4 +1,5 @@
-<section id="horarios">
+<div id="horarios" class="anchor-div-navbar"></div>
+<section class="my-32">
   <h1
     class="text-4xl font-semibold text-center text-wrap mx-auto mb-10 tracking-wide uppercase"
   >
