--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -58,6 +58,12 @@ const { title, description } = Astro.props;
         color: white;
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
       }
+
+      .anchor-div-navbar {
+        position: relative;
+        top: -125px;
+        visibility: hidden;
+      }
     </style>
   </body>
 </html>
