--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -1,4 +1,5 @@
-<section id="quienes_somos" class="mb-20">
+<div id="quienes_somos" class="anchor-div-navbar"></div>
+<section class="my-32">
   <h1
     class="text-4xl font-semibold text-center text-wrap mx-auto mb-10 tracking-wide uppercase"
   >
@@ -10,7 +11,7 @@
   >
     <div class="w-full md:w-1/2 flex justify-center">
       <img
-        src="src/assets/about_us.webp"
+        src="/assets/about_us.webp"
         alt="Quiénes somos"
         class="w-[500px] object-cover rounded-lg"
       />
