Update logo importing

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,5 +1,5 @@
 ---
-import logo from "@assets/logo.webp";
+import logo from "/public/assets/logo.webp";
 import { Image } from "astro:assets";
 ---
 
