Update AboutUs section
Removed paragraph and update styles, also add text-pretty attribute.

--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -16,8 +16,10 @@
         class="w-[500px] object-cover rounded-lg"
       />
     </div>
-    <div class="rounded-lg text-xl w-full md:w-1/2 p-5 mx-5 bg-black/50">
-      <p class="">
+    <div
+      class="font-semibold rounded-lg text-xl w-full md:w-1/2 p-5 mx-5 bg-black/50 text-pretty"
+    >
+      <p>
         ¡Bienvenidos al Teatro Serpiente! Soy Nicole, la directora de este
         maravilloso espacio cultural en el corazón de Santa Fe, Argentina. Acá,
         en el Teatro Serpiente, nos enorgullecemos de ofrecer una experiencia
@@ -32,9 +34,8 @@
         teatrales clásicas hasta espectáculos vanguardistas, asegurando que haya
         algo para todos los gustos y preferencias. Nos esforzamos por desafiar
         las expectativas y estimular el pensamiento crítico de nuestra
-        audiencia, y nuestro lema, <span
-          class="text-2xl text-orange_primary font-bold tracking-wide uppercase bg-purple_primary/50 p-1 rounded-md"
-          >"Cambiá la piel"</span
+        audiencia, y nuestro lema, <strong class="text-yellow_primary"
+          >"¡Cambiá la piel!"</strong
         >, refleja nuestro compromiso de ofrecer experiencias transformadoras y
         enriquecedoras. En el interior del Teatro Serpiente, encontrarán un
         ambiente acogedor y lleno de historia, donde la excelencia artística se
@@ -42,15 +43,6 @@
         impecable. Nuestros murales cuentan la rica historia del teatro
         argentino, mientras que nuestras instalaciones modernas garantizan una
         experiencia teatral inolvidable.
-      </p>
-      <p class="mt-5">
-        Estamos comprometidos con la excelencia en todo lo que hacemos, desde
-        nuestras producciones hasta nuestro servicio al cliente. En el Teatro
-        Serpiente, no solo ofrecemos entretenimiento, sino también una
-        oportunidad para explorar nuevas perspectivas, emociones y experiencias.
-        Esperamos darles la bienvenida pronto al Teatro Serpiente, donde los
-        sueños cobran vida y las emociones se desatan en cada función. ¡Gracias
-        por ser parte de nuestra comunidad teatral!
       </p>
     </div>
   </div>
