Change contact form colors

--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -14,8 +14,8 @@
           <div>
             <label class="sr-only" for="name">Nombre</label>
             <input
-              class="w-full rounded-lg p-3 bg-white focus:text-black text-black/70"
-              placeholder="Nombre"
+              class="w-full rounded-lg p-3 bg-white/90 placeholder-gray-500 focus:text-black text-black/70"
+              placeholder="Nombre y apellido"
               type="text"
               id="name"
             />
@@ -25,7 +25,7 @@
             <div>
               <label class="sr-only" for="email">Correo electrónico</label>
               <input
-                class="w-full rounded-lg p-3 bg-white focus:text-black text-black/70"
+                class="w-full rounded-lg p-3 bg-white/90 placeholder-gray-500 focus:text-black text-black/70"
                 placeholder="Correo electrónico"
                 type="email"
                 id="email"
@@ -35,7 +35,7 @@
             <div>
               <label class="sr-only" for="phone">Número de teléfono</label>
               <input
-                class="w-full rounded-lg p-3 bg-white focus:text-black text-black/70"
+                class="w-full rounded-lg p-3 bg-white/90 placeholder-gray-500 focus:text-black text-black/70"
                 placeholder="Número de teléfono"
                 type="tel"
                 id="phone"
@@ -103,7 +103,7 @@
             <label class="sr-only" for="message">Mensaje</label>
 
             <textarea
-              class="w-full rounded-lg p-3 bg-white focus:text-black text-black/70"
+              class="w-full rounded-lg p-3 bg-white/90 placeholder-gray-500 focus:text-black text-black/70"
               placeholder="Mensaje"
               rows="8"
               id="message"></textarea>
