Remove margin bottom in footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -29,7 +29,7 @@ import Logo from "./Logo.astro";
       <span class="sr-only">GitHub</span>
     </a>
   </div>
-  <div class="p-4 mb-6 flex flex-col md:mb-0 items-center justify-center">
+  <div class="p-4 flex flex-col md:mb-0 items-center justify-center">
     <a
       href="https://www.instagram.com/teatroserpiente/"
       class="text-white hover:scale-125 duration-300"
