Center logo on mobile Intro

--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -16,7 +16,7 @@ import Logo from "./Logo.astro";
     </h2>
   </header>
   <main class="flex">
-    <div class="max-w-[70ch] min-w-[20ch]">
+    <div class="max-w-[70ch] min-w-[20ch] flex items-center justify-center">
       <Logo class="m-auto" />
     </div>
     <aside class="mr-6 flex items-center">
