Raise navbar color opacity on mobile

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -37,7 +37,7 @@ import Logo from "./Logo.astro";
 
       <nav
         id="header-menu"
-        class="fixed w-full h-dvh inset-0 bg-purple_primary/90 md:text-xl lg:text-xl flex flex-col items-center justify-center gap-8 -translate-y-full transition-transform duration-300 target:translate-y-0 md:static md:h-[initial] md:bg-[initial] md:flex-row md:translate-y-[initial]"
+        class="fixed w-full h-dvh inset-0 bg-purple_primary/95 text-xl flex flex-col items-center justify-center gap-8 -translate-y-full transition-transform duration-300 target:translate-y-0 md:static md:h-[initial] md:bg-[initial] md:flex-row md:translate-y-[initial]"
       >
         <HeaderLink href="#">Principal</HeaderLink>
         <HeaderLink href="#quienes_somos">¿Quiénes somos?</HeaderLink>
