--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -64,6 +64,12 @@ const { title, description } = Astro.props;
         top: -125px;
         visibility: hidden;
       }
+
+      body {
+        margin: 0;
+        padding: 0;
+        width: fit-content;
+      }
     </style>
   </body>
 </html>
